move to st hosting server

--- a/apps/bird-cam-ui/src/assets/i18n/de_DE.json
+++ b/apps/bird-cam-ui/src/assets/i18n/de_DE.json
@@ -1,5 +1,9 @@
 {
   "app": {
     "title": "Birdcam"
+  },
+  "offlineHandler": {
+    "header": "Hoppla",
+    "message": "Irgendetwas ist mächtig schief gelaufen. Schau doch später noch mal rein."
   }
 }
