add view activity

--- a/libs/active-viewers/ui/src/assets/i18n/de_DE.json
+++ b/libs/active-viewers/ui/src/assets/i18n/de_DE.json
@@ -1,3 +1,6 @@
 {
-  "activeViewers": "Aktuell {{count}} Zuschauer"
+  "activeViewers": "Aktuell {{count}} Zuschauer",
+  "history": {
+    "title": "Zuschaueraktivität"
+  }
 }
