new layout and stream timelapse

--- a/libs/active-viewers/ui/src/assets/i18n/de_DE.json
+++ b/libs/active-viewers/ui/src/assets/i18n/de_DE.json
@@ -1,5 +1,6 @@
 {
   "activeViewers": "Aktuell {{count}} Zuschauer",
+  "viewer": "Zuschauer",
   "history": {
     "title": "Zuschaueraktivität"
   }
