--- a/libs/motion-activity/ui/src/assets/i18n/de_DE.json
+++ b/libs/motion-activity/ui/src/assets/i18n/de_DE.json
@@ -1,3 +1,6 @@
 {
-    "title": "Tagesaktivität"
+  "title": "Aktivität",
+  "recentActivities": "Kürzliche Aktivitäten",
+  "movements": "Bewegungserkennungen",
+  "timelapse": "Zeitraffer"
 }
